# canokey-hpm

./: .gitignore  CMakeLists.txt  README.md
inc/: crypto_config.h  hpm_sdk_mbedtls_config.h  os_port_config.h  tusb_config.h  usb_config.h
src/: CAS.S  admin_vendor.c  device2.c  device_port.c  main.c  tusb_config.h  usb.c  usb_config.h
src/canokey-core/: apdu.c  apdu.h  applets.c  applets.h  common.h  ctap.h  device.c  device.h  tusb_config.h
src/canokey-core/applets/admin/: admin.c
src/canokey-core/applets/ctap/: cose-key.h  ctap-internal.h  ctap-parser.c  ctap.c  secret.c  secret.h  u2f.c
src/canokey-core/applets/ndef/: ndef.c
src/canokey-core/applets/openpgp/: openpgp.c  pgp_key.c
src/canokey-core/applets/piv/: piv.c
src/canokey-core/include/: admin.h  apdu.h  ckey.h  common.h  ctap.h  device.h  key.h  piv.h
src/canokey-core/interfaces/NFC/: fm.c
src/canokey-core/interfaces/USB/class/ccid/: ccid.c  ccid_device.c  ccid_device.h  usbd_ccid.c  usbd_ccid.h
src/canokey-core/interfaces/USB/class/ctaphid/: ctaphid.c  ctaphid.h  ctaphid_device.c  ctaphid_device.h  usbd_ctaphid.c  usbd_ctaphid.h
src/canokey-core/interfaces/USB/class/hid/: hid.c
src/canokey-core/interfaces/USB/class/kbdhid/: kbdhid.c  kbdhid.h  usbd_kbdhid.c  usbd_kbdhid.h
src/canokey-core/interfaces/USB/class/webusb/: webusb.c  webusb.h
src/canokey-core/interfaces/USB/device/: usb_descriptors.c  usb_descriptors.h  usb_device.c  usb_device.h  usbd.c  usbd.h  usbd_canokey.c  usbd_conf.h  usbd_desc.c
src/canokey-core/src/: apdu.c  applets.c  ckey.c  device.c  fs.c  key.c
src/canokey-crypto/: aes.c  algo.c  algo.h  crypto-util.c  crypto-util.h  des.c  ecc.c  ecc.h  hmac.c  hmac.h  rand.c  rand.h  rsa.c  sha.c  sha.h  sm3.c
src/canokey-crypto/include/: aes.h  algo.h  ecc.h  hmac.h  sha.h
src/canokey-crypto/src/: aes.c  algo.c  caes.c  cdes.c  crsa.c  ecc.c  hmac.c  sha.c
