# Copyright (c) 2021-2025 HPMicro
# SPDX-License-Identifier: BSD-3-Clause

cmake_minimum_required(VERSION 3.13)

# set(CONFIG_MBEDTLS 1)
# set(CONFIG_MBEDTLS_USE_HPM_SDP 1)

set(CONFIG_CHERRYUSB 1)
set(CONFIG_USB_DEVICE 1)
set(CONFIG_USB_DEVICE_HID 1)

find_package(hpm-sdk REQUIRED HINTS $ENV{HPM_SDK_BASE})

# sdk_compile_definitions(-DMBEDTLS_CONFIG_FILE="hpm_sdk_mbedtls_config.h")

sdk_compile_definitions(USE_CYCLONECRYPTO)
sdk_compile_definitions(DEBUG_OUTPUT)
sdk_compile_definitions(FLT16_MANT_DIG=0)

# sdk_compile_options(-fno-inline)
# sdk_compile_options(-fstack-usage)

project(Canokey-hpm)

sdk_inc(inc)
sdk_ses_opt_lib_io_type(RTT)

# LittleFS
sdk_app_inc(src/3rd_party/littlefs)
sdk_app_inc(src/3rd_party/littlefs/port)
sdk_app_src(src/3rd_party/littlefs/lfs_util.c)
sdk_app_src(src/3rd_party/littlefs/lfs.c)
sdk_app_src(src/3rd_party/littlefs/port/hpm_flash.c)
sdk_app_src(src/3rd_party/littlefs/port/lfs_port.c)

# tinycbor
sdk_app_inc(src/3rd_party/tinycbor)
sdk_app_src(src/3rd_party/tinycbor/cborencoder.c)
sdk_app_src(src/3rd_party/tinycbor/cborencoder_close_container_checked.c)
sdk_app_src(src/3rd_party/tinycbor/cborencoder_float.c)
sdk_app_src(src/3rd_party/tinycbor/cborerrorstrings.c)
sdk_app_src(src/3rd_party/tinycbor/cborparser.c)
sdk_app_src(src/3rd_party/tinycbor/cborparser_dup_string.c)
sdk_app_src(src/3rd_party/tinycbor/cborparser_float.c)
sdk_app_src(src/3rd_party/tinycbor/cborpretty.c)
sdk_app_src(src/3rd_party/tinycbor/cborpretty_stdio.c)
sdk_app_src(src/3rd_party/tinycbor/cbortojson.c)
sdk_app_src(src/3rd_party/tinycbor/cborvalidation.c)
# sdk_app_src(src/3rd_party/tinycbor/open_memstream.c)


# CycloneCrypto
sdk_app_inc(src/3rd_party/CycloneCrypto/common)
sdk_app_inc(src/3rd_party/CycloneCrypto/cyclone_crypto)

sdk_app_src(src/3rd_party/CycloneCrypto/common/cpu_endian.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/common/date_time.c)
sdk_app_src(src/3rd_party/CycloneCrypto/common/debug.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/common/fs_port_fatfs.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/common/fs_port_posix.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/common/fs_port_rl_fs.c)
sdk_app_src(src/3rd_party/CycloneCrypto/common/os_port_none.c)
sdk_app_src(src/3rd_party/CycloneCrypto/common/path.c)
sdk_app_src(src/3rd_party/CycloneCrypto/common/resource_manager.c)
sdk_app_src(src/3rd_party/CycloneCrypto/common/str.c)

sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/aead/ccm.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/aead/chacha20_poly1305.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/aead/gcm.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/aead/siv.c)

sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/aes.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/aria.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/blowfish.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/camellia.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/cast128.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/cast256.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/chacha.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/des.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/des3.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/idea.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/mars.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/present.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/rc2.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/rc4.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/rc6.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/salsa20.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/seed.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/serpent.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/sm4.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/tea.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/trivium.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/twofish.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/xtea.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher/zuc.c)

sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher_modes/cbc.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher_modes/cfb.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher_modes/ctr.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher_modes/ecb.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher_modes/ofb.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/cipher_modes/xts.c)

sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/ecc/curve25519.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/ecc/curve448.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/ecc/ec.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/ecc/ecdh.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/ecc/ecdsa.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/ecc/ec_curves.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/ecc/ec_misc.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/ecc/ed25519.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/ecc/ed448.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/ecc/eddsa.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/ecc/sm2.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/ecc/x25519.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/ecc/x448.c)

sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/encoding/asn1.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/encoding/base64.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/encoding/base64url.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/encoding/oid.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/encoding/radix64.c)

# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hardware/stm32u5xx/stm32u5xx_crypto.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hardware/stm32u5xx/stm32u5xx_crypto_cipher.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hardware/stm32u5xx/stm32u5xx_crypto_hash.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hardware/stm32u5xx/stm32u5xx_crypto_pkc.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hardware/stm32u5xx/stm32u5xx_crypto_trng.c)

# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/blake2b.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/blake2b160.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/blake2b256.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/blake2b384.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/blake2b512.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/blake2s.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/blake2s128.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/blake2s160.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/blake2s224.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/blake2s256.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/md2.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/md4.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/md5.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/ripemd128.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/ripemd160.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/sha1.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/sha224.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/sha256.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/sha384.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/sha3_224.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/sha3_256.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/sha3_384.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/sha3_512.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/sha512.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/sha512_224.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/sha512_256.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/sm3.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/tiger.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/hash/whirlpool.c)

sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/kdf/bcrypt.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/kdf/concat_kdf.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/kdf/hkdf.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/kdf/md5_crypt.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/kdf/pbkdf.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/kdf/scrypt.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/kdf/sha_crypt.c)

sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/lwc/ascon.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/lwc/ascon_aead128.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/lwc/ascon_cxof128.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/lwc/ascon_hash256.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/lwc/ascon_xof128.c)

sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/mac/blake2b.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/mac/blake2s.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/mac/cmac.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/mac/gmac.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/mac/hmac.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/mac/kmac.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/mac/poly1305.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/mac/xcbc_mac.c)

sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/mpi/mpi.c)

# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/ocsp/ocsp_client.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/ocsp/ocsp_client_misc.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/ocsp/ocsp_common.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/ocsp/ocsp_req_create.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/ocsp/ocsp_req_format.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/ocsp/ocsp_resp_parse.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/ocsp/ocsp_resp_validate.c)

sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkc/dh.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkc/dsa.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkc/rsa.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkc/rsa_misc.c)

sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkcs7/pkcs7_common.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkcs7/pkcs7_decrypt.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkcs7/pkcs7_encrypt.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkcs7/pkcs7_format.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkcs7/pkcs7_parse.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkcs7/pkcs7_sign_generate.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkcs7/pkcs7_sign_verify.c)

sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/pem_cert_key_import.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/pem_common.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/pem_decrypt.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/pem_export.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/pem_import.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/pem_key_export.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/pem_key_import.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/pkcs5_common.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/pkcs5_decrypt.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/pkcs8_key_format.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/pkcs8_key_parse.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/x509_cert_create.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/x509_cert_ext_format.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/x509_cert_ext_parse.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/x509_cert_format.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/x509_cert_parse.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/x509_cert_validate.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/x509_common.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/x509_crl_ext_parse.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/x509_crl_parse.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/x509_crl_validate.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/x509_csr_create.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/x509_csr_format.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/x509_csr_parse.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/x509_csr_validate.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/x509_key_format.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/x509_key_parse.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/x509_sign_format.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/x509_sign_generate.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/x509_sign_parse.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pkix/x509_sign_verify.c)

sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pqc/kem.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pqc/mlkem1024.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pqc/mlkem512.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pqc/mlkem768.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/pqc/sntrup761.c)

sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/rng/hmac_drbg.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/rng/yarrow.c)

# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/scep/scep_client.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/scep/scep_client_misc.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/scep/scep_client_operations.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/scep/scep_client_req_format.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/scep/scep_client_resp_parse.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/scep/scep_client_transport.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/scep/scep_common.c)
# sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/scep/scep_debug.c)

sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/xof/cshake.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/xof/keccak.c)
sdk_app_src(src/3rd_party/CycloneCrypto/cyclone_crypto/xof/shake.c)

# Canokey-core
sdk_app_inc(src/canokey-core/applets/admin)
sdk_app_inc(src/canokey-core/applets/ctap)
sdk_app_inc(src/canokey-core/applets/ndef)
sdk_app_inc(src/canokey-core/applets/oath)
sdk_app_inc(src/canokey-core/applets/openpgp)
sdk_app_inc(src/canokey-core/applets/pass)
sdk_app_inc(src/canokey-core/applets/piv)
sdk_app_src(src/canokey-core/applets/admin/admin.c)
sdk_app_src(src/canokey-core/applets/ctap/ctap-parser.c)
sdk_app_src(src/canokey-core/applets/ctap/ctap.c)
sdk_app_src(src/canokey-core/applets/ctap/secret.c)
sdk_app_src(src/canokey-core/applets/ctap/u2f.c)
sdk_app_src(src/canokey-core/applets/ndef/ndef.c)
sdk_app_src(src/canokey-core/applets/oath/oath.c)
sdk_app_src(src/canokey-core/applets/openpgp/openpgp.c)
sdk_app_src(src/canokey-core/applets/openpgp/pgp_key.c)
sdk_app_src(src/canokey-core/applets/pass/pass.c)
sdk_app_src(src/canokey-core/applets/piv/piv.c)

sdk_app_inc(src/canokey-core/interfaces/NFC)
sdk_app_src(src/canokey-core/interfaces/NFC/fm.c)
sdk_app_src(src/canokey-core/interfaces/NFC/nfc.c)

sdk_app_inc(src/canokey-core/interfaces/USB/class/ccid)
sdk_app_inc(src/canokey-core/interfaces/USB/class/ctaphid)
sdk_app_inc(src/canokey-core/interfaces/USB/class/kbdhid)
sdk_app_inc(src/canokey-core/interfaces/USB/class/webusb)
sdk_app_inc(src/canokey-core/interfaces/USB/device)

sdk_app_src(src/canokey-core/interfaces/USB/class/ccid/ccid.c)
sdk_app_src(src/canokey-core/interfaces/USB/class/ctaphid/ctaphid.c)
sdk_app_src(src/canokey-core/interfaces/USB/class/kbdhid/kbdhid.c)
sdk_app_src(src/canokey-core/interfaces/USB/class/webusb/webusb.c)
sdk_app_src(src/canokey-core/interfaces/USB/device/usb_device.c)

sdk_app_inc(src/canokey-core)
sdk_app_src(src/canokey-core/apdu.c)
sdk_app_src(src/canokey-core/applets.c)
sdk_app_src(src/canokey-core/common.c)
sdk_app_src(src/canokey-core/device.c)
sdk_app_src(src/canokey-core/fs.c)
sdk_app_src(src/canokey-core/key.c)
sdk_app_src(src/canokey-core/pin.c)

# Canokey-crypto
sdk_app_inc(src/canokey-crypto)
sdk_app_src(src/canokey-crypto/aes.c)
sdk_app_src(src/canokey-crypto/algo.c)
sdk_app_src(src/canokey-crypto/block-cipher.c)
sdk_app_src(src/canokey-crypto/crypto-util.c)
sdk_app_src(src/canokey-crypto/des.c)
sdk_app_src(src/canokey-crypto/ecc.c)
sdk_app_src(src/canokey-crypto/hmac.c)
sdk_app_src(src/canokey-crypto/memzero.c)
sdk_app_src(src/canokey-crypto/rand.c)
sdk_app_src(src/canokey-crypto/rsa.c)
sdk_app_src(src/canokey-crypto/sha.c)
sdk_app_src(src/canokey-crypto/sm3.c)

# Main
sdk_app_src(src/admin_vendor.c)
sdk_app_src(src/device_port.c)
sdk_app_src(src/main.c)


generate_ide_projects()
